--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -5,3 +5,9 @@
 	display: inline-block;
 	font-weight: bold;
 }
+.readmore-button {
+	padding: 10px 20px;
+	border-radius: 10px;
+	text-decoration: none;
+	text-align: center;
+}
